change speaker height property for prevent broken layout

--- a/static/css/sass/main.scss
+++ b/static/css/sass/main.scss
@@ -414,7 +414,7 @@ section {
 		margin: 0 0 10px;
 		text-align: left;
 		list-style: none;
-		height: 180px;
+		min-height: 180px;
 	}
 
 	p {
